# models/index.js
@@ -10,8 +10,8 @@ const Booking = require('./booking');
 ImgCar.belongsTo(Car, { foreignKey: 'car_id' });
 Car.hasMany(ImgCar, { foreignKey: 'car_id' });
 
-Payment.belongsTo(Booking, { foreignKey: 'bookingId' });
-Booking.hasMany(Payment, { foreignKey: 'bookingId' });
+Payment.belongsTo(Booking, { foreignKey: 'bookingId', as: 'bookings' });
+
 
 Booking.belongsTo(User, { foreignKey: 'userId' });
 User.hasMany(Booking, { foreignKey: 'userId' });
@@ -19,8 +19,7 @@ User.hasMany(Booking, { foreignKey: 'userId' });
 Booking.belongsTo(Car, { foreignKey: 'carId' });
 Car.hasMany(Booking, { foreignKey: 'carId' });
 
-Location.belongsTo(Car, { foreignKey: 'car_id' });
-Car.hasMany(Location, { foreignKey: 'car_id' });
+Car.belongsTo(Location, { foreignKey: 'location_id', as: 'location' });
 
 module.exports = {
     sequelize,
