# routes/carRoutes.js
@@ -7,7 +7,6 @@ router.get('/car', [authJwt.verifyToken], carController.findAll);
 router.post('/car',[authJwt.verifyToken], carController.create);
 router.put('/:id',[authJwt.verifyToken], carController.update);
 router.delete('/:id',[authJwt.verifyToken], carController.delete);
-router.get('/by-ip/:ip', [authJwt.verifyToken], carController.findAvailableByLocation);
-
+router.get('/locations/:longitude/:latitude/cars' ,[authJwt.verifyToken],carController.findAvailableByLocation);
 
 module.exports = router;
