# routes/paymentRoutes.js
@@ -4,7 +4,6 @@ const authJwt = require('../middlewares/authJwt');
 const router = express.Router();
 
 router.post('/', [authJwt.verifyToken], paymentController.create);
-router.get('/booking/:bookingId', [authJwt.verifyToken], paymentController.findByBookingId);
 router.put('/process/:paymentId', [authJwt.verifyToken], paymentController.processPayment);
 router.put('/cancel/:paymentcancelId', [authJwt.verifyToken], paymentController.cancel);
 
